# rsyncdirector_deploy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt
rsyncdirector_deploy/: argparser.py  consts.py  main.py
rsyncdirector_deploy/configs/etc/logrotate.d/: rsyncdirector.conf.tmpl  rsyncdirector.tmpl
rsyncdirector_deploy/configs/etc/rsyncdirector/: rsyncdirector.env.tmpl  rsyncdirector.sh.tmpl
rsyncdirector_deploy/configs/etc/systemd/system/: rsyncdirector@.service.tmpl
rsyncdirector_deploy/deploy/: configs.py  install.py  linux.py  python.py  rsyncdirector.py  ssh.py  utils.py
